# weather_reports

./: .env.example  Cargo.toml  README.md
src/: .main.rs.swp  handlers.rs  lib.rs  main.rs  weather_aggregator.rs
src/weather_aggregator/weather_clients/: open_weather.rs  weatherbit.rs
src/weather_clients/: .mod.rs.swp  .open_weather.rs.swp  mod.rs  open_weather.rs  weatherbit.rs
tests/: integration.rs
tests/fixtures/: open_weather_current_success.json  weatherbit_current_success.json  weatherbit_invalid_key.json
