[package]
name = "weather-reports"
version = "0.1.0"
authors = ["Daniil Sunyaev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
dotenv = "0.15"
