[package]
name = "weather-reports"
version = "0.1.0"
authors = ["Daniil Sunyaev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
httpmock = "=0.5.2"
actix-rt = "1.1"
faux = "0.0.7"
tokio = "0.2"
